# cameraCollect

./: CMakeLists.txt  README.md
include/: include.h
include/CAMERA/: Codec.h  ISource.h  IVAHelper.h  VAType.h  zxQueue.h  zxThread.h
lib/libopencv/: libopencv_aruco.so.3.4  libopencv_core.so.3.4  libopencv_features2d.so.3.4.3  libopencv_hfs.so.3.4  libopencv_highgui.so.3.4.3  libopencv_img_hash.so.3.4.3  libopencv_imgcodecs.so.3.4  libopencv_imgproc.so.3.4  libopencv_line_descriptor.so.3.4.3  libopencv_ml.so.3.4.3  libopencv_phase_unwrapping.so.3.4  libopencv_stereo.so.3.4.3  libopencv_structured_light.so.3.4.3  libopencv_tracking.so.3.4  libopencv_video.so.3.4  libopencv_videoio.so.3.4.3  libopencv_xphoto.so.3.4
src/: camera.cpp  draw.cpp  main.cpp
